[package]
name = "blogenius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = {version = "0.4.38", features = ["serde"]}
clap = "4.5.4"
comrak = "0.22.0"
fronma = {version = "0.2.0", features = ["toml"]}
handlebars = "5.1.2"
indoc = "2.0.5"
serde = { version = "1.0.198", features = ["derive"]}
thiserror = "1.0.59"
toml = "0.8.12"
